--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "moment": "^2.29.4",
-    "mongodb": "^4.8.1",
-    "mongoose": "^6.5.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.19"
   }
 }
