--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "express-validator": "^6.14.2",
     "moment": "^2.29.4",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.19"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.19",
+    "sequelize": "^6.21.3",
+    "sequelize-cli": "^6.4.1"
   }
 }
